--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="alturaimagen">100dp</dimen>
+    <dimen name="detalleimagenaltura">170dp</dimen>
+    <dimen name="colapse">160dp</dimen>
+    <dimen name="line">1dp</dimen>
 </resources>
