--- a/app/src/main/res/layout/detalleimagen.xml
+++ b/app/src/main/res/layout/detalleimagen.xml
@@ -8,20 +8,25 @@
         android:layout_width="match_parent"
         android:id="@+id/appbar"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:layout_height="wrap_content">
+        android:fitsSystemWindows="true"
+        android:layout_height="@dimen/colapse">
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            android:layout_height="@dimen/colapse">
+            android:layout_height="@dimen/colapsebar">
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/colapse"
+                android:layout_height="@dimen/imagen"
                 android:src="@mipmap/ic_launcher"
                 app:layout_collapseMode="parallax"
                 android:id="@+id/imagen"/>
             <android.support.v7.widget.Toolbar
                 android:layout_width="match_parent"
                 app:layout_collapseMode="pin"
+                android:id="@+id/toolbar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 android:layout_height="?attr/actionBarSize">
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
